test-results/match_named_identifier.c.err
/mnt/c/Users/matthew/git/upp/examples/upp.match_named_identifier.c:30:5: error: redefinition of ‘foo’
   30 | int foo = 100;
      |     ^~~
/mnt/c/Users/matthew/git/upp/examples/upp.match_named_identifier.c:10:5: note: previous definition of ‘foo’ with type ‘int’
   10 | int foo = 100;
      |     ^~~
/mnt/c/Users/matthew/git/upp/examples/upp.match_named_identifier.c:31:5: error: redefinition of ‘bar’
   31 | int bar = 200;
      |     ^~~
/mnt/c/Users/matthew/git/upp/examples/upp.match_named_identifier.c:11:5: note: previous definition of ‘bar’ with type ‘int’
   11 | int bar = 200;
      |     ^~~
/mnt/c/Users/matthew/git/upp/examples/upp.match_named_identifier.c:32:6: error: redefinition of ‘f’
   32 | void f() {
      |      ^
/mnt/c/Users/matthew/git/upp/examples/upp.match_named_identifier.c:12:6: note: previous definition of ‘f’ with type ‘void()’
   12 | void f() {
      |      ^
/mnt/c/Users/matthew/git/upp/examples/upp.match_named_identifier.c:35:5: error: redefinition of ‘main’
   35 | int main() {
      |     ^~~~
/mnt/c/Users/matthew/git/upp/examples/upp.match_named_identifier.c:15:5: note: previous definition of ‘main’ with type ‘int()’
   15 | int main() {
      |     ^~~~
/mnt/c/Users/matthew/git/upp/examples/upp.match_named_identifier.c:50:5: error: redefinition of ‘foo’
   50 | int foo = 100;
      |     ^~~
/mnt/c/Users/matthew/git/upp/examples/upp.match_named_identifier.c:10:5: note: previous definition of ‘foo’ with type ‘int’
   10 | int foo = 100;
      |     ^~~
/mnt/c/Users/matthew/git/upp/examples/upp.match_named_identifier.c:51:5: error: redefinition of ‘bar’
   51 | int bar = 200;
      |     ^~~
/mnt/c/Users/matthew/git/upp/examples/upp.match_named_identifier.c:11:5: note: previous definition of ‘bar’ with type ‘int’
   11 | int bar = 200;
      |     ^~~
/mnt/c/Users/matthew/git/upp/examples/upp.match_named_identifier.c:52:6: error: redefinition of ‘f’
   52 | void f() {
      |      ^
/mnt/c/Users/matthew/git/upp/examples/upp.match_named_identifier.c:12:6: note: previous definition of ‘f’ with type ‘void()’
   12 | void f() {
      |      ^
/mnt/c/Users/matthew/git/upp/examples/upp.match_named_identifier.c:55:5: error: redefinition of ‘main’
   55 | int main() {
      |     ^~~~
/mnt/c/Users/matthew/git/upp/examples/upp.match_named_identifier.c:15:5: note: previous definition of ‘main’ with type ‘int()’
   15 | int main() {
      |     ^~~~
/mnt/c/Users/matthew/git/upp/examples/upp.match_named_identifier.c:66:23: error: redefinition of ‘foo’
   66 | int bar = 200; */ int foo = (int)100;
      |                       ^~~
/mnt/c/Users/matthew/git/upp/examples/upp.match_named_identifier.c:10:5: note: previous definition of ‘foo’ with type ‘int’
   10 | int foo = 100;
      |     ^~~
/mnt/c/Users/matthew/git/upp/examples/upp.match_named_identifier.c:67:5: error: redefinition of ‘bar’
   67 | int bar = (int)200;
      |     ^~~
/mnt/c/Users/matthew/git/upp/examples/upp.match_named_identifier.c:11:5: note: previous definition of ‘bar’ with type ‘int’
   11 | int bar = 200;
      |     ^~~
/mnt/c/Users/matthew/git/upp/examples/upp.match_named_identifier.c:68:6: error: redefinition of ‘f’
   68 | void f() {
      |      ^
/mnt/c/Users/matthew/git/upp/examples/upp.match_named_identifier.c:12:6: note: previous definition of ‘f’ with type ‘void()’
   12 | void f() {
      |      ^
/mnt/c/Users/matthew/git/upp/examples/upp.match_named_identifier.c:71:5: error: redefinition of ‘main’
   71 | int main() {
      |     ^~~~
/mnt/c/Users/matthew/git/upp/examples/upp.match_named_identifier.c:15:5: note: previous definition of ‘main’ with type ‘int()’
   15 | int main() {
      |     ^~~~
